# hiab

./: .gitignore  .gitmodules  CMakeLists.txt
doc/: outline.md
src/: files.cpp  files.h  glext.txt  hiab.cpp  math.cpp  math.h  opengl.cpp  opengl.h  prefix.h  render.cpp  render.h  scene.cpp  scene.h  shaders.cpp  shaders.h
src/shaders/: basic_v.glsl  downsample_f.glsl  downsample_v.glsl  frustum_v.glsl  heads_f.glsl  layer0_f.glsl  position4_v.glsl  scene_object_f.glsl  scene_object_v.glsl  trace.glsl  trace_preview_f.glsl  trace_preview_v.glsl  utils_f.glsl  varying4_f.glsl
subs/include/: tinyobj.h
